--- a/.github/workflows/updateContractsEtherscanWeb.yml
+++ b/.github/workflows/updateContractsEtherscanWeb.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Update From Etherscan web
+name: Dump Contracts (Etherscan/Web/Mainnet)
 
 # Controls when the action will run. 
 on:
@@ -32,6 +32,8 @@ jobs:
         working-directory: utils
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Dump Contracts (web)
         run: python3 download_contracts_etherscan_io.py
         working-directory: utils
+    
+      # commit changes
