--- a/.github/workflows/updateContractsEtherscanWeb.yml
+++ b/.github/workflows/updateContractsEtherscanWeb.yml
@@ -4,6 +4,10 @@ name: Dump Contracts (Etherscan/Web/Mainnet)
 
 # Controls when the action will run. 
 on:
+  schedule:
+  # run at 1am every day
+  # * is a special character in YAML so you have to quote this string
+    - cron:  '0 1,13 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
