--- a/.github/workflows/updateContractsEtherscanWeb.yml
+++ b/.github/workflows/updateContractsEtherscanWeb.yml
@@ -51,9 +51,9 @@ jobs:
 
           # The name of the user that will be displayed as the author of the commit
           # Default: author of the commit that triggered the run
-          author_name: GithubAction/updateContractsEtherscanWeb
+          author_name: auto/updateContractsEtherscanWeb
 
 
           # The message for the commit
           # Default: 'Commit from GitHub Actions (name of the workflow)'
-          message: 'GithubAction - updateContractsEtherscanWeb - autocommit'
+          message: 'auto - updateContractsEtherscanWeb - autocommit'
