--- a/.github/workflows/updateContractsEtherscanWebRopsten.yml
+++ b/.github/workflows/updateContractsEtherscanWebRopsten.yml
@@ -51,9 +51,9 @@ jobs:
 
           # The name of the user that will be displayed as the author of the commit
           # Default: author of the commit that triggered the run
-          author_name: GithubAction/updateContractsEtherscanWebRopsten
+          author_name: auto/updateContractsEtherscanWebRopsten
 
 
           # The message for the commit
           # Default: 'Commit from GitHub Actions (name of the workflow)'
-          message: 'GithubAction - updateContractsEtherscanWebRopsten (ropsten) - autocommit'
+          message: 'auto - updateContractsEtherscanWebRopsten (ropsten) - autocommit'
