--- a/.github/workflows/updateContractsEtherscanWebGoerli.yml
+++ b/.github/workflows/updateContractsEtherscanWebGoerli.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Dump Contracts (Etherscan/Web/Goerli)
+name: ETH (Etherscan/Web/Goerli)
 
 # Controls when the action will run. 
 on:
@@ -38,7 +38,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Dump Contracts (web)
-        run: python3 download_contracts_etherscan_io.py goerli
+        run: python3 download_etherscan.py -c etherscan.com -n goerli
         working-directory: utils
     
       # commit changes
